refactor: polishing, add: more body contents

--- a/index.html
+++ b/index.html
@@ -46,6 +46,56 @@
         </div>
     </section>
 
+    <section class="findhome">
+        <div class="findhome-left">
+            <div class="findhome-text">
+                <h2>Find homes you can afford with BuyAbility℠</h2>
+                <p>Answer a few questions. We'll highlight homes you're likely to qualify for.</p>
+            </div>
+            <div class="findhome-box">
+                <div class="findhome-box-header">
+                    <img src="assets/images/zillow-logo.png" alt="Zillow Logo" class="zillow-logo">
+                    <span>Zillow Home Loans</span>
+                </div>
+
+                <div class="findhome-box-content">
+                    <div class="row">
+                        <div>
+                            <h3>$--</h3>
+                            <p>Suggested target price</p>
+                        </div>
+                        <div>
+                            <h3>$--</h3>
+                            <p>BuyAbility℠</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div>
+                            <h3>$--</h3>
+                            <p>Mo. payment</p>
+                        </div>
+                        <div>
+                            <h3>--%</h3>
+                            <p>Today's rate</p>
+                        </div>
+                        <div>
+                            <h3>--%</h3>
+                            <p>APR</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <button class="findhome-btn">Let's get started</button>
+        </div>
+
+        <div class="findhome-images">
+            <img src="assets/images/house1.jpg" alt="House example">
+            <img src="assets/images/house1.jpg" alt="House example">
+            <img src="assets/images/house1.jpg" alt="House example">
+        </div>
+    </section>
+
     <script src="assets/js/app.js"></script>
 
 </body>
