add: main body, footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 
     <section class="hero">
         <div class="hero-image-wrapper">
-            <img class="hero-img" src="assets/images/hero.jpg" alt="Hero Image">
+            <img class="hero-img" src="assets/images/hero.webp" alt="Hero Image">
 
             <div class="hero-overlay">
                 <h1>Agents. Tours.</h1>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="recommendation-images">
-            <img src="assets/images/house1.jpg" alt="House for sale">
+            <img src="assets/images/house.webp" alt="House for sale">
         </div>
     </section>
 
@@ -54,8 +54,8 @@
             </div>
             <div class="findhome-box">
                 <div class="findhome-box-header">
-                    <img src="assets/images/zillow-logo.png" alt="Zillow Logo" class="zillow-logo">
-                    <span>Zillow Home Loans</span>
+                    <img src="assets/images/logo.png" alt="Zillow Logo" class="zillow-logo">
+                    <span>Home Loans</span>
                 </div>
 
                 <div class="findhome-box-content">
@@ -90,11 +90,68 @@
         </div>
 
         <div class="findhome-images">
-            <img src="assets/images/house1.jpg" alt="House example">
-            <img src="assets/images/house1.jpg" alt="House example">
-            <img src="assets/images/house1.jpg" alt="House example">
+            <div class="property-card">
+                <div class="property-image">
+                    <img src="assets/images/house1.webp" alt="House example" loading="lazy">
+                    <span class="property-badge">Within BuyAbility</span>
+                </div>
+                <div class="property-info">
+                    <div class="skeleton-line"></div>
+                    <div class="skeleton-line short"></div>
+                </div>
+            </div>
+
+            <div class="property-card">
+                <div class="property-image">
+                    <img src="assets/images/house2.webp" alt="House example" loading="lazy">
+                    <span class="property-badge">Within BuyAbility</span>
+                </div>
+                <div class="property-info">
+                    <div class="skeleton-line"></div>
+                    <div class="skeleton-line short"></div>
+                </div>
+            </div>
+
+            <div class="property-card">
+                <div class="property-image">
+                    <img src="assets/images/house3.webp" alt="House example" loading="lazy">
+                    <span class="property-badge">Within BuyAbility</span>
+                </div>
+                <div class="property-info">
+                    <div class="skeleton-line"></div>
+                    <div class="skeleton-line short"></div>
+                </div>
+            </div>
         </div>
     </section>
+
+    <section class="services">
+        <div class="service-card">
+            <img src="assets/images/buyahome.webp" alt="Buy a home">
+            <h3>Buy a home</h3>
+            <p>A real estate agent can provide you with a clear breakdown of costs so that you can avoid surprise
+                expenses.</p>
+            <a href="#" class="service-btn">Find a local agent</a>
+        </div>
+
+        <div class="service-card">
+            <img src="assets/images/rentahome.webp" alt="Rent a home">
+            <h3>Rent a home</h3>
+            <p>We’re creating a seamless online experience – from shopping on the largest rental network, to applying,
+                to paying rent.</p>
+            <a href="#" class="service-btn">Find rentals</a>
+        </div>
+
+        <div class="service-card">
+            <img src="assets/images/sellahome.webp" alt="Sell a home">
+            <h3>Sell a home</h3>
+            <p>No matter what path you take to sell your home, we can help you navigate a successful sale.</p>
+            <a href="#" class="service-btn">See your options</a>
+        </div>
+    </section>
+
+    <footer id="footer-placeholder"></footer>
+
 
     <script src="assets/js/app.js"></script>
 
