--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
 
     <footer id="footer-placeholder"></footer>
 
+    <!-- #todo
+    navbar sticky az ye jayi be baad
+    footer -->
 
     <script src="assets/js/app.js"></script>
 
